<resources>
    <string name="app_name">Multisensor Tool</string>
    <string name="app_surname">Test your phone!</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="title_activity_accelerometer">Accelerometer</string>
    <string name="title_activity_gravity">Gravity</string>
    <string name="title_activity_light">Light</string>
    <string name="title_activity_gps">GPS</string>
    <string name="title_activity_network">Network</string>
    <string name="title_activity_humidity">Humidity</string>
    <string name="title_activity_pressure">Pressure</string>
    <string name="text_getting_location">Getting location...</string>
    <string name="text_accelerometer_unavailable">Accelerometer unavailable</string>
    <string name="text_humidity_unavailable">Humidity sensor unavailable</string>
    <string name="text_pressure_unavailable">Pressure sensor unavailable</string>
    <string name="text_temperature_unavailable">Temperature sensor unavailable</string>
    <string name="text_light_unavailable">Light sensor unavailable</string>
    <string name="text_magnetic_unavailable">Magnetic sensor unavailable</string>
    <string name="text_proximity_far">\'Far\' state</string>
    <string name="text_proximity_near">\'Near\' state</string>
    <string name="text_proximity_unavailable">Proximity sensor unavailable</string>
    <string name="text_screen_orientation">Screen orientation</string>
    <string name="text_portrait">Portrait</string>
    <string name="text_landscape">Landscape</string>
    <string name="text_not_available_yet">Not available yet!</string>
    <string name="title_activity_proximity">Proximity</string>
    <string name="title_activity_compass">Compass</string>
    <string name="text_5_support">5GHz support</string>
    <string name="text_time">Time</string>
    <string name="title_activity_magnetic_field">MagneticField</string>
    <string name="title_activity_linear_acceleration">LinearAcceleration</string>
    <string name="search_interval">Search interval</string>
    <string name="title_activity_gyroscope">Gyroscope</string>
    <string name="sensor_label">Sensor</string>
    <string name="sensor_calibrated_name">GyroscopeCalibrated</string>
    <string name="sensor_frequency">Sensor frequency</string>
    <string name="text_low_filter">Low pass filter</string>
    <string name="text_filter_level">Filtering level</string>
    <string name="sensor_uncalibrated_name">GyroscopeUncalibrated</string>
    <string name="sensor_active">Active</string>
    <string name="sensor_unavailable">Unavailable</string>
    <string name="action_config">Settings</string>
    <string name="action_reset">Reset</string>
    <string name="label_x_axis">X-Axis</string>
    <string name="label_y_axis">Y-Axis</string>
    <string name="label_z_axis">Z-Axis</string>
    <string name="value_default">0.0</string>
    <string name="not_supported">Your device does not have flash light</string>
    <string name="value_default_mean_filter">0.5</string>
    <string name="value_default_complimentary_filter">0.5</string>
    <string name="developer_url">KircherElectronics.com</string>
    <string name="confirm_label">I got this.</string>
    <string name="action_options">Options</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_start_log">Start</string>
    <string name="action_stop_log">Stop</string>
    <string name="title_activity_screen">Screen</string>
    <string name="title_activity_storage">Storage</string>
    <string name="title_activity_wi_fi">WiFi</string>
    <string name="title_activity_wi_fi_info">WiFi Information</string>
    <string name="title_activity_wi_fi_lister">WiFi Lister</string>
    <string name="title_activity_temperature">Temperature</string>
    <string name="title_activity_settings">Settings</string>
	<string name="explorer_name">Explorer</string>
    <string name="accelerometer_name">Accelerometer</string>
    <string name="acceleration_name">Acceleration</string>
    <string name="start_name">Check Sensor</string>
    <string name="app_version">v3.0</string>
    <string name="action_diagnostics">Diagnostic</string>
    <string name="action_log">Log</string>
    <string name="action_filter">Help</string>
    <string name="sensor_name">Sensor</string>
    <string name="frequency_label">Frequency:</string>
    <string name="default_value">0.000</string>
    <string name="default_value_mean_filter">1.0</string>
    <string name="default_value_low_pass_filter">0.5</string>
    <string name="x_axis_label">X-Axis</string>
    <string name="max_label">Max:</string>
    <string name="max_amp_label">Max Amp:</string>
    <string name="min_label">Min:</string>
    <string name="var_label">Var:</string>
    <string name="mean_label">Mean:</string>
    <string name="axis_label">Axis</string>
    <string name="positive_label">Positive</string>
    <string name="negative_label">Negative</string>
    <string name="noise_label">Noise</string>
    <string name="rms_label">RMS:</string>
    <string name="plot_label">Plot</string>
    <string name="vector_label">Vector</string>
    <string name="done_label">Done</string>
    <string name="label_mean_filter">Mean Filter</string>
    <string name="label_filter_active">Filter Active</string>
    <string name="label_time_constant">Time Constant</string>
    <string name="title_activity_accelerometer_logger">Accelerometer Logger</string>
    <string name="title_activity_accelerometer_vector">Accelerometer Vector</string>

    <string name="capabilities_msg">Capabilities: %s</string>
    <string name="frecuency_msg">Frecuency: %s MHz</string>
    <string name="signal_level_msg">Signal Level: %s dBm</string>

    <string name="wifi_is_not_enabled_msg">WiFi is not enabled</string>
    <string name="wifi_disabling_msg">WiFi is currently being disabling</string>
    <string name="wifi_disabled_msg">WiFi is disabled</string>
    <string name="wifi_enabling_msg">WiFi is currently being enabling</string>
    <string name="wifi_enabled_msg">WiFi is enabled</string>
    <string name="wifi_unknown_state_msg">WiFi is in an unknown state</string>
    <string name="networks_found_msg">%d networks found</string>

    <string name="network_phone_type">Phone type</string>
    <string name="network_net_type">Network type</string>
    <string name="network_sim_state">SIM state</string>
    <string name="network_locked">Locked</string>
    <string name="network_absent">Absent</string>
    <string name="network_required">required</string>
    <string name="network_ready">Ready</string>
    <string name="network_unknown">Unknown</string>

    <string name="network_device_id">Device ID</string>
    <string name="network_subscriber_id">Subscriber ID</string>
    <string name="network_sim_serial">SIM serial umber</string>
    <string name="network_sim_operator_id">SIM operator ID</string>
    <string name="network_sim_operator">SIM operator</string>
    <string name="network_sim_country">SIM country</string>
    <string name="network_type">Network type</string>
    <string name="network_operator_id">Network operator ID</string>
    <string name="network_operator">Network operator</string>
    <string name="network_country">Network country</string>
    <string name="network_software">Device software version</string>


    <string name="link_speed">Speed</string>
    <string name="link_frequency">Frequency</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_available">Not available</string>
    <string name="ghz_support">5Ghz support</string>
    <string name="current_frequency">Frequency</string>


    <string-array name="frequency_array">
        <item>Slow</item>
        <item>Medium</item>
        <item>Fast</item>
    </string-array>

    <integer-array name="menu_resources">
        <item>@drawable/ic_car_white_48dp</item>
        <item>@drawable/ic_chart_areaspline_white_48dp</item>
        <item>@drawable/vector</item>
        <item>@drawable/compass_invert</item>
        <item>@drawable/ic_weight_white_48dp</item>
        <item>@drawable/ic_gps_fixed_white_48dp</item>
        <item>@drawable/gyroscope</item>
        <item>@drawable/ic_water_white_48dp</item>
        <item>@drawable/ic_wb_incandescent_white_48dp</item>
        <item>@drawable/ic_vector_curve_white_48dp</item>
        <item>@drawable/ic_magnet_white_48dp</item>
        <item>@drawable/ic_network_cell_white_48dp</item>
        <item>@drawable/ic_screen_rotation_white_48dp</item>
        <item>@drawable/pressure</item>
        <item>@drawable/ic_ruler_white_48dp</item>
        <item>@drawable/ic_sd_storage_white_48dp</item>
        <item>@drawable/ic_temperature_celsius_white_48dp</item>
        <item>@drawable/ic_network_wifi_white_48dp</item>
    </integer-array>
    <string name="title_activity_lantern">Lantern</string>


</resources>
