<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#000000">

    <PreferenceCategory android:title="@string/frequency_label" >
        <ListPreference
            android:title="@string/sensor_frequency"
            android:key="sensor_frequency_preference"
            android:defaultValue="2"
            android:entries="@array/frequency"
            android:entryValues="@array/frequencyValues" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/text_low_filter" >
        <ListPreference
            android:title="@string/text_filter_level"
            android:key="filter_level"
            android:defaultValue="0.1"
            android:entries="@array/low_filter"
            android:entryValues="@array/low_filter_values" />
    </PreferenceCategory>
</PreferenceScreen>