<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_gyroscope" tools:context="es.pabgarci.multisensortool.Gyroscope">

    <RelativeLayout
        android:id="@+id/layout_calibrated_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="0.5" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" >

            <TextView
                android:id="@+id/label_calibrated_filter_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensor_calibrated_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/label_calibrated_filter_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/label_calibrated_filter_name"
                android:text="@string/sensor_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_calibrated_status"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="0.5" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" >

            <TextView
                android:id="@+id/label_sensor_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensor_unavailable"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_calibrated_statistics"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" >

            <TableLayout
                android:id="@+id/table_calibrated_statistics_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/table_calibrated_statistics_left_row_0"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dip" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1" >

                        <TextView
                            android:id="@+id/label_x_axis_calibrated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/label_x_axis"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/value_x_axis_calibrated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/label_x_axis_calibrated"
                            android:text="@string/value_default"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <TextView
                            android:id="@+id/label_y_axis_calibrated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/label_y_axis"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/value_y_axis_calibrated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/label_y_axis_calibrated"
                            android:text="@string/value_default"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1" >

                        <TextView
                            android:id="@+id/label_z_axis_calibrated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/label_z_axis"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/value_z_axis_calibrated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/label_z_axis_calibrated"
                            android:text="@string/value_default"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </RelativeLayout>
                </TableRow>
            </TableLayout>
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="7.25"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1" >

        <es.pabgarci.multisensortool.gauge.GaugeBearing
            android:id="@+id/gauge_bearing_calibrated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

        <es.pabgarci.multisensortool.gauge.GaugeRotation
            android:id="@+id/gauge_tilt_calibrated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1.25"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1" >

        <es.pabgarci.multisensortool.view.BackgroundButton
            android:id="@+id/button_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0.5"
            android:background="@drawable/start_button_background"
            android:scaleType="centerInside"
            android:text="@string/action_start_log"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>
