<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_accelerometer_logger"
    tools:context="es.pabgarci.multisensortool.AccelerometerLogger">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight=".5" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" >

            <TextView
                android:id="@+id/label_filter_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/acceleration_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ff3d00"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/label_filter_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/label_filter_name"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/sensor_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#fff"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_statistics"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" >

            <TableLayout
                android:id="@+id/table_statistics_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/table_statistics_left_row_0"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dip" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1" >

                        <TextView
                            android:id="@+id/label_x_axis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:fontFamily="sans-serif-condensed"
                            android:text="X:"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#fff" />

                        <TextView
                            android:id="@+id/value_x_axis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/label_x_axis"
                            android:fontFamily="sans-serif-condensed"
                            android:text="0.00"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#fff" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <TextView
                            android:id="@+id/label_y_axis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:fontFamily="sans-serif-condensed"
                            android:text="Y:"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#fff" />

                        <TextView
                            android:id="@+id/value_y_axis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/label_y_axis"
                            android:fontFamily="sans-serif-condensed"
                            android:text="0.00"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#fff" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1" >

                        <TextView
                            android:id="@+id/label_z_axis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:fontFamily="sans-serif-condensed"
                            android:text="Z:"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#fff" />

                        <TextView
                            android:id="@+id/value_z_axis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/label_z_axis"
                            android:fontFamily="sans-serif-condensed"
                            android:text="0.00"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#fff" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1" >

                        <TextView
                            android:id="@+id/label_hz_frequency"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:fontFamily="sans-serif-condensed"
                            android:text="Hz:"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#fff" />

                        <TextView
                            android:id="@+id/value_hz_frequency"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/label_hz_frequency"
                            android:fontFamily="sans-serif-condensed"
                            android:text="0.00"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#fff" />
                    </RelativeLayout>
                </TableRow>
            </TableLayout>
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <com.androidplot.xy.XYPlot
        android:id="@+id/plot_sensor"
        androidplot.renderMode="use_background_thread"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="6.8"
        title="Acceleration" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1" >

        <es.pabgarci.multisensortool.view.BackgroundButton
            android:id="@+id/button_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0.5"
            android:background="@drawable/start_button_background"
            android:scaleType="centerInside"
            android:text="@string/action_start_log"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/color_bar" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true" >

                <ImageView
                    android:id="@+id/image_developer_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:src="@drawable/ke_icon" />

                <TextView
                    android:id="@+id/label_developer_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/image_developer_icon"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/developer_url"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/color_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true" >

                <ImageView
                    android:id="@+id/image_color_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/color_bar" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
